--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="../portfolio/src/assets/planet-icon.png"
-    />
+    <link rel="icon" type="image/png" href="../assets/planet-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brian Zhang</title>
   </head>
