--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="main-screen">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="src/assets/planet-icon.png" />
+    <link rel="icon" type="image/png" href="src/assets/planet-tab.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brian Zhang</title>
   </head>
